<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">阿拉订企业版</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_clipboard_empty">剪切板清空</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">Alading购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_read_book">浏览本书</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_about">以ZXing的开源条码库为基础</string>
    <string name="msg_buggy">该器件具有已知的错误导致条形码扫描问题。为了 更多信息，请访问 http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
    <string name="msg_bulk_mode_scanned">散装模式：条码扫描，并保存</string>
    <string name="msg_camera_framework_bug">很抱歉，机器人相机出现问题。您可能需要重新启动设备。</string>
    <string name="msg_default_contents">内容</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">镜头范围内进行扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_barcode_failed">找不到条码。</string>
    <string name="msg_encode_contents_failed">不能从已有数据中读取条码。   </string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物结合条码扫描价格，评论和不打开浏览器。您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_loading_apps">装载应用名单</string>
    <string name="msg_not_our_results">你离开此应用程序。搜索结果，您会看到的都没有涉及这个应用程序</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">没有返回页面</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_searching_book">搜索图书</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">你可以在你的手机屏幕上显示条码，并使用其他手机扫描此条码方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_unmount_usb">对不起，SD卡是不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存许多条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary">使用％s作为产品ID占位</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">解码一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">数据矩阵码解码</string>
    <string name="preferences_decode_QR_title">解码QR条码</string>
    <string name="preferences_front_light_summary">使前灯如果可用</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">当扫描条形码</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Alading图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="title_about">条码扫描器</string>
    <string name="wa_name">网络配置</string>
    <string name="wifi_changing_network">不断变化的网络</string>
    <string name="wifi_connect_failed">网络连接失败</string>
    <string name="wifi_connected">连接的</string>
    <string name="wifi_creating_network">创建网络</string>
    <string name="wifi_modifying_network">修改网络</string>
    <string name="wifi_ssid_label">网络名称</string>
    <string name="wifi_ssid_missing">网络实名失踪</string>
    <string name="wifi_type_incorrect">网络类型不正确</string>
    <string name="wifi_type_label">类型</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="scanResult">扫描结果</string>
    <string name="scanActivity_Title1">积分抵用券详单</string>
    <string name="label_point">---------------------------------------------------------------------------------------------------------------------------- </string>
    <string name="orderNo_Title">订单号</string>
    <string name="button_CandelUsed">暂不使用</string>
    <string name="button_ImmediatelyUsed">立即使用</string>
    <string name="orderAmount_Lable">商品面额</string>
    <string name="orderDate_Lable">有效期</string>
    <string name="backend_no_result">无法加载数据，请拨打热线电话，联系技术人员。</string>
    <string name="statusPicDiscript">订单已使用</string>
    <string name="button_againScan">重新扫描</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan_tip">点击此处可利用摄像头进行扫描\n支持一维码和二维码</string>
    <string name="input_tip">请选择预付卡类型</string>
    <string name="input_card_number">请输入卡片号码</string>
    <string name="g_ok">确定</string>
    <string name="or">OR</string>
    <string name="input_manually">手动输入</string>
    <string name="g_confirm">确认</string>
    <string name="input_bar_code">请输入商品的条码</string>
    <string name="already_input_bits">已输入%1$s位</string>
    <string name="sample_bar_tip">条码无法识别\n即可手动输入</string>
    <string name="product_bar_code">商品条码</string>
    <string name="prepaid_card_number">预付卡卡号</string>
    <string name="input_prepaid_card_number">请输入预付卡的卡号</string>
    <string name="title_activity_alading_ee">阿拉订企业版</string>
    <!-- 会员登录界面 -->
    <string name="page_login_textView_service">登录</string>
    <string name="page_login_button_registe">注册</string>
    <string name="page_login_button_login">登录</string>
    <string name="page_login_checkBox_A_login">自动登录</string>
    <string name="page_login_textView_forgetPassword">忘记密码</string>
    <string name="page_login_textView_user">账    户：</string>
    <string name="page_login_textView_v_user_hint">请输入登录账号</string>
    <string name="page_login_textView_password">密    码：</string>
    <string name="page_login_alertMessage_login_and_registe">账户或密码错误，请重新输入。</string>
    <string name="page_login_password_insufficient">登录密码限制6&#8211;20位, 请重新输入</string>
    <string name="page_login_alert_input_correct_account">请输入正确的账户名。</string>
    <string name="page_login_alert_input_password">请输入账户密码</string>
    <string name="prompt_input_password">请输入登录密码</string>
    <string name="title_activity_scan_history">ScanHistoryActivity</string>
    <string name="general_in_process">请求正在处理中，请稍等！</string>
    <!-- XListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开即可更新&#8230;</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_delivery_address">DeliveryAddressActivity</string>

    <string name="scan_record_user">用户：%1$s</string>
    <string name="scan_record_number">券号：%1$s</string>
    <string name="scan_record_money">金额：%1$s 元</string>
    <string name="scan_record_time">兑换时间：%1$s</string>
    
    <!-- 条形码界面 -->
    <string name="orderNo">订单号：%1$s</string>
    <string name="receipt">收银联</string>
    <string name="receiptTitle">￥%1$s</string>
    <string name="printDate">生成时间：\n%1$s</string>
    <string name="expiredDate">过期时间：\n%1$s</string>
    <string name="hotServiceLine">服务热线：400&#8211;888&#8211;5811</string>
    <string name="remark">注：该积分兑换凭证可在钱包中的代金券中查看</string>
    
    <string name="order_money">兑换金额：%1$s元</string>
    <string name="order_number">订单号：%1$s</string>
    <string name="order_time">订单生成时间：%1$s</string>
    <string name="order_expiration">有效期：%1$s</string>
    <string name="order_mobile">用户：%1$s</string>
</resources>