<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainback"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="0.17"
            android:background="@drawable/title_bar_background" >

            <TextView
                android:id="@+id/txtScanResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/scanResult"
                android:textColor="@color/result_text" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.08"
            android:background="@drawable/mainback"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txtTelResultTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/scanActivity_Title1"
                android:textColor="@color/contents_text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:ellipsize="none"
                    android:fitsSystemWindows="false"
                    android:freezesText="false"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/label_point"
                    android:textColor="@color/contents_text"
                    android:textColorHint="@color/contents_text" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:background="@color/sbc_header_view"
                    android:fitsSystemWindows="false"
                    android:freezesText="false"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/orderNo_Title"
                    android:textColor="@color/contents_text"
                    android:textColorHint="@color/contents_text" />
            </RelativeLayout>

            <TextView
                android:id="@+id/TxtScanCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="left"
                android:textColor="@color/contents_text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:ellipsize="none"
                    android:fitsSystemWindows="false"
                    android:freezesText="false"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/label_point"
                    android:textColor="@color/contents_text"
                    android:textColorHint="@color/contents_text" />

                <TextView
                    android:id="@+id/orderAmount_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/sbc_header_view"
                    android:gravity="center"
                    android:text="@string/orderAmount_Lable"
                    android:textColor="@color/contents_text" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtOrderAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/contents_text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:ellipsize="none"
                    android:fitsSystemWindows="false"
                    android:freezesText="false"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/label_point"
                    android:textColor="@color/contents_text"
                    android:textColorHint="@color/contents_text" />

                <TextView
                    android:id="@+id/orderDate_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/sbc_header_view"
                    android:gravity="center"
                    android:text="@string/orderDate_Lable"
                    android:textColor="@color/contents_text" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtOrderDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/contents_text" />

            <LinearLayout
                android:id="@+id/layoutUserControl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible" >

                <Button
                    android:id="@+id/b_user_not_now"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/big_button"
                    android:text="@string/button_CandelUsed"
                    android:textColor="@color/result_text" />

                <Button
                    android:id="@+id/b_user_at_once"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/big_button"
                    android:text="@string/button_ImmediatelyUsed"
                    android:textColor="@color/result_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutGoBackControl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible" >

                <Button
                    android:id="@+id/b_scan_another"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/big_button"
                    android:text="@string/button_againScan"
                    android:textColor="@color/result_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutViewStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/statusPicDiscript"
            android:src="@drawable/usedpic" />
    </RelativeLayout>

</RelativeLayout>