<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputManuallyActivity" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/title_bar_background" >

        <TextView
            style="@style/manually_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/input_manually" >
        </TextView>

        <Button
            android:id="@+id/confirm_button"
            style="@style/button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:enabled="false"
            android:text="@string/g_confirm" >
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:background="@color/entrance_bg" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_shade" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sample_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/keyboard_area"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_round_all_white"
            android:paddingBottom="30dp" >

            <RelativeLayout
                android:id="@+id/input_area"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp" >

                <EditText
                    android:id="@+id/code_edit"
                    style="@style/main_input"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:focusable="true"
                    android:hint="@string/input_bar_code"
                    android:windowSoftInputMode="adjustUnspecified|stateAlwaysHidden" />

                <TextView
                    android:id="@+id/inputed_bits"
                    style="@style/main_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/already_input_bits" >
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_area"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/sample_bar_iamge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:src="@drawable/shopper_icon" />

                <TextView
                    android:id="@+id/bar_tip"
                    style="@style/sample_bar_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/tip_bg"
                    android:gravity="center"
                    android:text="@string/sample_bar_tip" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/keyboard_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                layout="@layout/dialpad" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>